--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,13 @@
       "args": [
         "--project",
         "angular2"
-      ]
+      ],
+      "dependsOn": [
+        "Recreate test folder"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/test"
+      }
     }
   ]
 }
