Add JS and React/Next.js template

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
       "command": "config-styleguide",
       "args": [
         "--project",
-        "angular2"
+        "javascript"
       ],
       "dependsOn": [
         "Recreate test folder"
