--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "Tiago Boeing",
   "license": "MIT",
   "keywords": [
@@ -37,5 +35,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tiagoboeing/styleguide-cli.git"
   }
 }
