--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run changelog && git add CHANGELOG.md"
+      "pre-push": "npm run changelog && git add CHANGELOG.md"
     }
   }
 }
