--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiagoboeing/create-styleguide",
-  "version": "1.0.1",
+  "version": "1.0.2-0",
   "description": "A CLI to automate style guide configs for frontend projects, this uses ESLint and Prettier.",
   "main": "src/index.js",
   "bin": {
