--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chalk": "^4.1.0",
     "esm": "^3.2.25",
     "inquirer": "^7.3.3",
-    "listr": "^0.14.3",
+    "listr2": "^3.2.2",
     "ncp": "^2.0.0",
     "pkg-install": "^1.0.0"
   },
