fix: #1 Fix problem with select a a project type on Windows terminals (Like Git Bash or PowerShell) (#2)
* Change new URL to __dirname
* Add changelog generate command to preversion
* Readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tiagoboeing/create-styleguide",
-  "version": "1.0.3",
-  "description": "A CLI to automate style guide configs for frontend projects, this uses ESLint and Prettier.",
+  "version": "1.0.4-fix.0",
+  "description": "A CLI to automate style guide configs for JS based projects, this uses ESLint and Prettier.",
   "main": "src/index.js",
   "bin": {
     "create-styleguide": "bin/create-styleguide"
@@ -10,6 +10,7 @@
     "access": "public"
   },
   "scripts": {
+    "postversion": "npm run changelog && git add . && git push && git push --tags",
     "changelog": "auto-changelog -p --hide-credit && git add CHANGELOG.md"
   },
   "author": "Tiago Boeing",
