--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiagoboeing/create-styleguide",
-  "version": "1.0.4-fix.0",
+  "version": "1.0.4",
   "description": "A CLI to automate style guide configs for JS based projects, this uses ESLint and Prettier.",
   "main": "src/index.js",
   "bin": {
